GKE/cluster/base/emailservice.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: emailservice
spec:
  replicas: 5
  selector:
    matchLabels:
      app: emailservice
  strategy:
    blueGreen:
      activeService: emailservice-active
      autoPromotionEnabled: true
      previewService: emailservice-preview
  template:
    metadata:
      labels:
        app: emailservice
    spec:
      containers:
      - env:
        - name: PORT
          value: '8080'
        - name: DISABLE_PROFILER
          value: '1'
        image: asia-docker.pkg.dev/yoondaegyoung-01-400304/gcf-artifacts/boutique-image/emailservice:0381ee5
        livenessProbe:
          grpc:
            port: 8080
          periodSeconds: 5
        name: server
        ports:
        - containerPort: 8080
        readinessProbe:
          grpc:
            port: 8080
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
      nodeSelector:
        cloud.google.com/gke-nodepool: boutique
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: emailservice-active
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 8080
  selector:
    app: emailservice
---
apiVersion: v1
kind: Service
metadata:
  name: emailservice-preview
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 8080
  selector:
    app: emailservice
