GKE/cluster/base/paymentservice.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: paymentservice
spec:
  replicas: 5
  selector:
    matchLabels:
      app: paymentservice
  strategy:
    blueGreen:
      activeService: paymentservice-active
      autoPromotionEnabled: true
      previewService: paymentservice-preview
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      containers:
      - env:
        - name: PORT
          value: '50051'
        - name: DISABLE_PROFILER
          value: '1'
        image: asia-docker.pkg.dev/yoondaegyoung-01-400304/gcf-artifacts/boutique-image/paymentservice:0381ee5
        livenessProbe:
          grpc:
            port: 50051
        name: server
        ports:
        - containerPort: 50051
        readinessProbe:
          grpc:
            port: 50051
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
      nodeSelector:
        cloud.google.com/gke-nodepool: boutique
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice-active
spec:
  ports:
  - port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: paymentservice
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice-preview
spec:
  ports:
  - port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: paymentservice
