GKE/cluster/base/productcatalogservice.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: productcatalogservice
spec:
  selector:
    matchLabels:
      app: productcatalogservice
  strategy:
    blueGreen:
      activeService: productcatalogservice-active
      autoPromotionEnabled: true
      previewService: productcatalogservice-preview
  template:
    metadata:
      labels:
        app: productcatalogservice
    spec:
      containers:
      - env:
        - name: PORT
          value: '3550'
        - name: DISABLE_PROFILER
          value: '1'
        image: asia-northeast3-docker.pkg.dev/yoondaegyoung-01-400304/gcf-artifacts/my-image/productcatalogservice:9c8c002
        livenessProbe:
          grpc:
            port: 3550
        name: server
        ports:
        - containerPort: 3550
        readinessProbe:
          grpc:
            port: 3550
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
      nodeSelector:
        cloud.google.com/gke-nodepool: boutique
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice-active
spec:
  ports:
  - port: 3550
    protocol: TCP
    targetPort: 3550
  selector:
    app: productcatalogservice
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice-preview
spec:
  ports:
  - port: 3550
    protocol: TCP
    targetPort: 3550
  selector:
    app: productcatalogservice
